[FIX] Remove unintended white space below body in "Basic Bootstrap (Fixed top navbar)" layout

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2997,7 +2997,8 @@ body.tiki.navbar-padding {
   padding-top: 3.25rem; }
 
 body.layout_social.tiki.navbar-padding {
-  padding-top: 5.25rem; }
+  padding-top: 5.25rem;
+  padding-bottom: 0; }
 
 body.fullscreen.tiki.navbar-padding {
   padding-top: 0; }
