--- a/themes/base_files/scss/_tiki-bootstrap_overrides.scss
+++ b/themes/base_files/scss/_tiki-bootstrap_overrides.scss
@@ -45,6 +45,7 @@ body.tiki.navbar-padding {
 
 body.layout_social.tiki.navbar-padding {
 	padding-top: $navbar-fixed-height + 2rem;
+  padding-bottom: 0;
 }
 
 body.fullscreen.tiki.navbar-padding {
